--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# 临时文件
+temp/
+cache/
+characters/
+f5_tts.pid
